--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -13,7 +13,7 @@ h1 {
     color: darkblue;
 }
 
-img {
+main img {
     width: 150px;
     height: auto;
     border: 1px;
@@ -21,6 +21,34 @@ img {
     box-shadow: 0 0 30px gray;
 }
 
-p{
-    padding: 10px;
+p {
+    padding: 0px;
+}
+
+main {
+    max-width: 850px;
+}
+
+aside {
+    width: 850px;
+    margin: 5px;
+    border: 1px;
+    padding: 2px;
+    background-color: white;
+    color: black;
+}
+
+h2 {
+    color: darkblue;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+footer {
+    margin-top: 20px;
+    border-top: 1px solid lightgrey;
+    text-align: center;
 }
